[package]
name = "binstore"
version = "0.1.0"
authors = ["Vincent Foley <vfoley@gmail.com>", "Mathieu Lapointe <mathieu.lapointe6@gmail.com>"]
edition = "2018"

[dependencies]
bincode = "~1.1"
chrono = "~0.4"
clap = { version = "~2.32", default-features = false }
lz4 = "~1.23"
serde = { version = "~1.0", features = ["derive"] }
serde_json = "~1.0"
log = "~0.4"
env_logger = "~0.6"

[dev-dependencies]
tempfile = "~3.0"
assert_matches = "~1.3"
proptest = "~0.9"
rand = "~0.6"
